# CppBot

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/cmake/: FindCPPBOT.cmake
example/src/: main.cpp
include/: CPPBot
lib/linux/: CPPBot.cpp  Screen.cpp
lib/macos/: CPPBot.cpp  Keyboard.cpp
lib/windows/: CPPBot.cpp  Mouse.cpp
test/: main.cpp  test.cpp
